<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <TextView android:text="@string/my_nanodegree_apps"
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="22sp"/>

    <Button android:text="@string/spotify_streamer"
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv"
        android:background="@color/orange"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"/>

    <Button android:text="@string/scores_app"
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button1"
        android:background="@color/orange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"/>

    <Button android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:background="@color/orange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"/>

    <Button android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button3"
        android:background="@color/orange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"/>

    <Button android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button4"
        android:background="@color/orange"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"/>

    <Button android:text="@string/capstone_my_own_app"
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button5"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"/>

</RelativeLayout>
